force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <description>Manage the flights data in this Object</description>
    <label>Flight</label>
    <nameField>
        <label>Flight Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>