force-app/main/default/objects/Flight__c/fields/Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type__c</fullName>
    <label>Aircraft Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boeing</fullName>
            </value>
            <value>
                <fullName>Airbus</fullName>
            </value>
            <value>
                <fullName>Private Jet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>