force-app/main/default/objects/Flight__c/fields/Flight_Duration__c.field-meta.xml
<CustomField>
    <fullName>Flight_Duration__c</fullName>
    <formula>Arrival_Time__c  -  Departure_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>