force-app/main/default/objects/Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aircraft_Type__c</columns>
    <columns>Arrival_Airport__c</columns>
    <columns>Departure_Airport__c</columns>
    <columns>Arrival_Time__c</columns>
    <columns>Departure_Time__c</columns>
    <columns>Flight_Duration__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>